# BioSpheres-Q

./: .gitignore  BLOCKLY_SYSTEM_SUMMARY.md  Cargo.toml  GENOME_FORMAT.md  GPU_COMPUTE_COMPLETE.md  GPU_COMPUTE_STATUS.md  build.rs  crash_log_1767047849.txt  crash_log_1767048026.txt  dock_default_preview.ron  dock_state.ron  dock_state_cpu.ron  dock_state_preview.ron  how 34d76ab --stat  test_size.rs  ui_settings.json
.claude/: settings.local.json
.kiro/steering/: bevy-rust-best-practices.md
Obsidian/: Biospheres Overview.md
assets/shaders/: boundary_crossing.wgsl  cell_division.wgsl  cell_physics_spatial.wgsl  cell_position_update.wgsl  cell_velocity_update.wgsl  gpu_cell.wgsl  gpu_collision.wgsl  grid_clear.wgsl  grid_insert.wgsl  volumetric_fog.wgsl
bevy_egui_local/src/: input.rs  lib.rs
bevy_mod_imgui-main/: Cargo.toml  README.md
bevy_mod_imgui-main/examples/: render-to-texture.rs
bevy_mod_imgui-main/src/: lib.rs
blockly_editor/examples/: bevy_system_query.xml  biospheres_cell_type.xml  collision_shader.xml  cross_mode_reference.xml  rust_vec3_math.xml  simple_genome.xml  wgsl_compute_shader_example.xml
blockly_editor/integration/: blockly_bridge.rs
blockly_editor/web/: app.js  code_parser.js  index.html  style.css  workflows.js
genomes/: README.md
src/: lib.rs  main.rs
src/cell/: adhesion.rs  adhesion_forces.rs  adhesion_manager.rs  adhesion_zones.rs  division.rs  mod.rs  type_registry.rs  types.rs
src/genome/: mod.rs  node_graph.rs
src/input/: cell_dragging.rs  mod.rs
src/rendering/: adhesion_lines.rs  boundary_crossing.rs  cells.rs  debug.rs  flagellocyte_mesh.rs  gpu_camera.rs  gpu_compute.rs  gpu_compute_dispatcher.rs  gpu_compute_pipeline.rs  gpu_icosphere.rs  gpu_renderer.rs  gpu_shaders.rs  gpu_triple_buffer.rs  gpu_types.rs  mod.rs  skybox.rs  volumetric_fog.rs
src/simulation/: adhesion_inheritance.rs  canonical_physics.rs  canonical_physics_clean.rs  cell_allocation.rs  cell_debug.rs  clock.rs  cpu_physics.rs  cpu_sim.rs  double_buffer.rs  gpu_physics.rs  gpu_sim.rs  initial_state.rs  mod.rs  nutrient_system.rs  physics.rs  physics_config.rs  preview_sim.rs  synchronized_nutrients.rs  time_scrubber_bridge.rs
src/ui/: camera.rs  camera_settings.rs  cell_inspector.rs  debug_info.rs  dock.rs  genome_editor.rs  imgui_panel.rs  imgui_style.rs  imgui_widgets.rs  lighting_settings.rs  (+14 more)
(+34 files in other folders)
