[package]
name = "biospheres-bevy"
version = "0.1.8"
edition = "2021"

[lib]
name = "biospheres_bevy"
path = "src/lib.rs"

[[bin]]
name = "biospheres"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.17", features = [
    "multi_threaded",
    "jpeg",
] }
bevy_mesh = "0.17"
bevy_asset = "0.17"
bevy_embedded_assets = "0.14"
bevy_egui = { path = "./bevy_egui_local" }
egui_dock = { path = "./egui_dock_local", features = ["serde"] }
# egui_node_graph = "0.8"  # TODO: Find correct version or implement custom node graph
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
wgpu = "26.0"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "2.0"
pollster = "0.4"
winit = "0.30"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi"] }

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.futures-lite]
version = "2.0"

[dependencies.rayon]
version = "1.10"

[dev-dependencies]
proptest = "1.4"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable fast compiles for development
[profile.dev.package.bevy_render]
opt-level = 3

# Use local egui forks for all egui-related dependencies
[patch.crates-io]
egui = { path = "./egui_local/crates/egui" }
emath = { path = "./egui_local/crates/emath" }
epaint = { path = "./egui_local/crates/epaint" }
ecolor = { path = "./egui_local/crates/ecolor" }
